<resources>
    <string name="app_name">Shooting diary</string>
    <string name="splashWelcome">welcome</string>
    <string name="splashDescription">to the future of shooting</string>
    <string name="splashLogin">LOGIN</string>
    <string name="splashRegister">REGISTER</string>
    <string name="contentDescription">App logo.</string>
    <string name="loginWelcome">welcome back</string>
    <string name="loginDescription">please log in below</string>
    <string name="emailInput">E-MAIL ADDRESS</string>
    <string name="passwordInput">PASSWORD</string>
    <string name="registerDescription">please register below</string>
    <string name="usernameInput">USERNAME</string>
    <string name="showPassword">SHOW</string>
    <string name="hidePassword">HIDE</string>
    <string name="menuButton">Menu</string>
    <string name="matches">matches</string>
    <string name="addMatch">Add match</string>
    <string name="matchDetails">match details</string>
    <string name="inner10s">Inner 10s:</string>
    <string name="temperature">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="airPressure">Air pressure:</string>
    <string name="overallMood">Overall mood:</string>
    <string name="reviewSeries">REVIEW SERIES</string>
    <string name="notes">Notes:</string>
    <string name="back">Back</string>
    <string name="editMatch">Edit match</string>
    <string name="testLong">blablablablablablablablablablablabla</string>
    <string name="series">series</string>
    <string name="syncSeries">Sync series</string>
    <string name="seriesDetails">series details</string>
    <string name="editSeries">Edit series</string>
    <string name="deleteSeries">DELETE SERIES</string>
    <string name="deleteMatch">DELETE MATCH</string>
    <string name="result">Result:</string>
    <string name="decimalResult">Decimal result:</string>
    <string name="time">Time:</string>
    <string name="enterUsername">Please enter a username</string>
    <string name="enterEmail">Please enter a valid e-mail address</string>
    <string name="enterPassword">Please enter a password</string>
    <string name="usernameNotExists">No user with such username exists</string>
    <string name="usernameExists">A user with such username already exists</string>
    <string name="emailExists">A user with such email already exists</string>
    <string name="wrongPassword">Incorrect password</string>
    <string name="passwordNotStrongEnough">Password has to contain be at least 8 characters long</string>
    <string name="noMatchesForUser">No matches found!</string>
    <string name="matchNotFound">Match not found!</string>
    <string name="matchDeleteSuccess">Match deleted</string>
    <string name="noSeriesFound">No series found!</string>
    <string name="seriesNotFound">Series not found!</string>
    <string name="refresh">refresh</string>
    <string name="signOut">sign out</string>
    <string name="signature">an Advance Ventures product</string>
    <string name="version">v1.0.0 beta</string>
    <string name="close">Close</string>
    <string name="date">Date:</string>
    <string name="startTime">Start time:</string>
    <string name="endTime">End time:</string>
    <string name="location">Location:</string>
    <string name="temperatureUnit">°C</string>
    <string name="humidityUnit">%</string>
    <string name="airPressureUnit">kPa</string>
    <string name="save">Save</string>
    <string name="emptyWarning">Fields must contain a value (except for Notes)</string>
    <string name="matchResultRangeWarning">Result must be between 0 and 600 (border inclusive)</string>
    <string name="matchInner10Warning">Amount of inner 10s must be between 0 and 60 (border inclusive)</string>
    <string name="humidityWarning">Humidity level must be between 0 and 100 (border inclusive)</string>
    <string name="matchUpdated">Match successfully updated</string>
    <string name="seriesResultRangeWarning">Result must be between 0 and 100 (border inclusive)</string>
    <string name="seriesDecimalRangeWarning">Decimal result must be between 0 and 100 (border inclusive)</string>
    <string name="seriesInner10Warning">Amount of inner 10s must be between 0 and 10 (border inclusive)</string>
    <string name="airPressureNegative">Air pressure cannot be negative</string>
    <string name="matchAdded">Match added successfully</string>
    <string name="seriesUpdated">Series successfully updated</string>
    <string name="today">TODAY</string>
</resources>