<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">

    <ImageView
        android:id="@+id/circle"
        android:layout_width="625dp"
        android:layout_height="625dp"
        android:src="@drawable/menubg"
        app:layout_constraintBottom_toTopOf="@+id/signature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/closeMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="?attr/colorPrimary"
        android:src="@drawable/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="?attr/colorPrimary"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/refresh"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/closeMenuButton"
        app:layout_constraintTop_toBottomOf="@+id/closeMenuButton" />

    <TextView
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="?attr/colorPrimary"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/signOut"
        android:textAlignment="center"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/refreshButton"
        app:layout_constraintTop_toBottomOf="@+id/refreshButton" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/version"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signature"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>