<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/matchListLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchListFragment">

    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menuButton"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toTopOf="@+id/matchList"
        app:layout_constraintEnd_toStartOf="@+id/matchesTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/matchesTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/matches"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/matchList"
        app:layout_constraintEnd_toStartOf="@+id/addMatchButton"
        app:layout_constraintStart_toEndOf="@+id/menuButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addMatchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/addMatch"
        android:src="@drawable/add"
        app:layout_constraintBottom_toTopOf="@+id/matchList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/matchesTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matchList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuButton" />

</androidx.constraintlayout.widget.ConstraintLayout>