<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/seriesListLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeriesListFragment">

    <ImageButton
        android:id="@+id/seriesListBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back"
        android:src="@drawable/arrow_back_ios_new"
        app:layout_constraintBottom_toTopOf="@+id/seriesList"
        app:layout_constraintEnd_toStartOf="@+id/seriesListTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/seriesListTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/series"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/seriesList"
        app:layout_constraintEnd_toStartOf="@+id/syncSeriesButton"
        app:layout_constraintStart_toEndOf="@+id/seriesListBackButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/syncSeriesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/syncSeries"
        android:src="@drawable/sync"
        app:layout_constraintBottom_toTopOf="@+id/seriesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seriesListTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/seriesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seriesListBackButton" />
</androidx.constraintlayout.widget.ConstraintLayout>